@@ -1,1 +1,8 @@
 # EcoBikeRental
+# How to run:
+ - Install java, javafx, mysql
+ - Instal eclipse
+ - In source\assets\db import file sql to your system  
+ - In run configurations of app when you run , add (--module-path "E:\Games\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml) like that to  VM arguments 
+ - In src/entity/db/CapStoneDB.java change ("root","yasuo1234gg") to ("your username of DB", "your password of DB")
+ - Run the app
